assets/index-YXWgfP3.css
/* ... */
#purchaseButton {
  display: none;
  width: 250px;
  height: 50px;
  border: none;
}
#approveButton {
  display: none;
  width: 250px;
  border: none;
  height: 50px;
  background-color: none !important;
}
#purchaseButtonUSDT {
  display: none;
  color: #fff;
  width: 220px;
  border-radius: 40px;
  height: 50px;
}
.app-card-buttons {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 16px;
}
#claimTokens {
  display: none;
}
.input-icon-wrap {
  width: 96%;
  height: 60px;
  align-items: center;
  border: 1px solid #3f3f3f;
  border-radius: 25px;
  padding: 0 15px;
  color: #fff !important;
}
.input-with-icon {
  background: transparent;
  border: none;
  outline: none;
  color: #000 !important;
  width: 90% !important;
}
.claimbtn {
  width: 380px;
  height: 50px;
  margin-top: 30px;
  color: #fff !important;
  border: 3px solid !important;
  font-weight: 800 !important;
  font-size: 20px !important;
  margin-bottom: 10px;
}
.buybtn {
  padding: 10px;
  border: 2px solid transparent;
  background-color: transparent;
  cursor: pointer;
}

.payment-types {
  display: flex;
  justify-content: center;
  gap: 10px;
  color: #fff;
}

.payment-types a {
  color: #fff;
  padding: 10px 10px;
  width: 100px;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
  text-decoration: none;
  border: 2px solid #636363;
  border-radius: 20px;
  font-size: 14px;
  font-weight: 400;
}

#ETHbutton.active,
#USDTbutton.active {
  border: 2px solid #1c9cde;
}
.conbtn {
  border-radius: 100px;
  background: linear-gradient(104deg, rgb(0, 115, 255) 0%, rgb(170, 170, 170) 94%);
  border-radius: 58px;
  padding: 2px;
}
.contbtn-content {
  background-color: rgb(2, 7, 13);
  border-radius: 58px;
  padding: 9px 24px;
  transition: all .3s ease-in-out;
  display: flex;
  align-items: center;
  gap: 3px;
}
.conbtn:hover > .contbtn-content {
  background: transparent;
}
@font-face {
  font-family: cardfont;
  src: url(/assets/Poppins-Light-0-vgrCHX.ttf);
}
.newfontcard {
    font-weight: 700;
}
.cardbgset {
  width: 500px;
  max-width: 85vw;
  background-color: rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(50px);
  padding: 20px;
  border: 2px solid #353535;
  border-radius: 10px;
}
.newrowsett {
  width: 93%;
  max-width: 400px;
  margin: auto !important;
}
.buytokenfont {
  font-size: 22px;
}
.numberfont {
  font-size: 22px;
}
.navbartop {
  padding: 18px 10px !important;
}
.navbar-scrolled {
  background-color: #000000b0 !important;
  transition: background-color 0.3s ease-in-out;
}
.tooltipBtn {
  position: relative;
  cursor: pointer;
}
.tooltipContent {
  display: none;
  position: absolute;
  background-color: #1a1a1a;
  border: 1px solid #3d3d3d;
  color: #fff;
  text-align: center;
  padding: 15px;
  border-radius: 5px;
  z-index: 1;
  bottom: 110%;
  left: 50%;
  transform: translate(-50%);
  white-space: nowrap;
  font-size: 14px;
}
.tooltipPara {
  color: #fff;
}
.tooltipBtn:hover .tooltipContent {
  display: block;
}
@media screen and (max-width: 768px) {
  .numberfont {
    font-size: 17px;
  }
  .stgbtn {
    padding: 5px 10px !important;
    height: 40px;
    width: 90px;
    text-align: center;
    align-content: center;
    font-size: 14px;
  }
  .buytokenfont {
    font-size: 18px;
  }
  .stgbtn22 {
    padding: 1px 10px !important;
  }
  .newrowsett {
    width: 100% !important;
    margin: auto !important;
  }
  .input-icon-wrap {
    width: 100%;
    padding: 0 2px;
  }
  .add-auster:before {
    left: 0;
    margin-left: -40px;
  }
  .add-auster:after {
    right: 0;
    margin-right: -40px;
  }
}

/* chat support huspot */

#hubspot-messages-iframe-container {
  color-scheme : light;
}

